# conservision

./: .gitignore  benchmark.ipynb  convert_to_clahe.ipynb  convnext_large_384_k_fold.ipynb  convnext_large_384_k_fold.py  data.py  dividemix_dataloader.py  dividemix_train.py  eda.ipynb  eda2.ipynb  experiments.md  fast_ai_k_fold.py  fast_ai_k_fold_data.pkl  fast_ai_k_fold_partial.py  fast_ai_k_fold_post_refine_data.pkl  fast_ai_k_fold_pre_refine_data.pkl  fast_ai_k_fold_pre_refining.ipynb  fast_ai_k_fold_refined.py  fast_ai_k_fold_refining.ipynb  fast_ai_k_fold_sharpening.py  fast_ai_k_fold_submission.py  lib.py  main.py  photo.py  pyproject.toml  resnet50-2.ipynb  resnet50.ipynb  resnet50_2.ipynb  siglip2.ipynb  siglip2_base_256.ipynb  siglip2_refined.ipynb  temperature_scaling.py  transformations.py
data/: benchmark.ipynb
src/: dataset.py  training.py  util_siglip.py
